boot module-1 Spring AutoConfig Jdbc Initializr

--- a/lab/30-jdbc-boot-solution/pom.xml
+++ b/lab/30-jdbc-boot-solution/pom.xml
@@ -44,6 +44,7 @@
         </dependency>
      </dependencies>
 
+     <!-- to generate fat jar executable and run the application for maven -->
      <build>
           <plugins>
                <plugin>
