--- a/lab/30-jdbc-boot-solution/src/main/resources/application.properties
+++ b/lab/30-jdbc-boot-solution/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#logging.level.root=DEBUG
 logging.level.root=ERROR
+
+
+#spring.sql.init.schema-locations=<path to your schema SQL file>
+#spring.sql.init.data-locations=<path to your data SQL file>
+
