--- a/lab/30-jdbc-boot-solution/build.gradle
+++ b/lab/30-jdbc-boot-solution/build.gradle
@@ -1,6 +1,6 @@
-apply plugin: "org.springframework.boot"
+apply plugin: "org.springframework.boot" //for packaging and running
 
-dependencies {
+dependencies { //no parent compare to maven
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'org.hsqldb:hsqldb'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
