--- a/lab/32-jdbc-autoconfig/build.gradle
+++ b/lab/32-jdbc-autoconfig/build.gradle
@@ -1,4 +1,5 @@
 // TO-DO-01 : Add the Spring Boot Plugin
+apply plugin: "org.springframework.boot"
 
 
 dependencies {
@@ -6,8 +7,11 @@ dependencies {
 
     // TO-DO-02 : Refactor from discrete Spring Framework
     // dependency to JDBC Boot Starter
-    implementation 'org.springframework:spring-jdbc'
-    
+    //implementation 'org.springframework:spring-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 // Create original jar file with "gradlew assemble"
