--- a/lab/34-spring-data-jpa/build.gradle
+++ b/lab/34-spring-data-jpa/build.gradle
@@ -9,6 +9,6 @@ dependencies {
 
 test {
     // TODO-08 comment out before running the RewardNetworkTests
-    exclude '**/RewardNetworkTests.class'
+    //exclude '**/RewardNetworkTests.class'
 }
 
