boot module-4 REST controller request URI mapping

--- a/lab/36-mvc/src/main/resources/application.properties
+++ b/lab/36-mvc/src/main/resources/application.properties
@@ -16,3 +16,4 @@ logging.level.com.zaxxer.hikari=INFO
 # Setup a MustacheViewResolver for the home page.
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.html
+server.port=8088
