boot module-8 actuator endpoint security tags custom health

--- a/lab/44-actuator/build.gradle
+++ b/lab/44-actuator/build.gradle
@@ -12,3 +12,15 @@ dependencies {
 // TO-DO-07: Add BuildInfo task to the Spring Boot Gradle plugin
 
 // TO-DO-08: Add additional properties of name, javaVersion, operatingSystem
+springBoot  {
+    buildInfo {
+        properties {
+            name = "actuator app"
+            additional = [
+                    javaVersion:     System.properties['java.version'],
+                    operatingSystem: "${System.properties['os.name']} (${System.properties['os.version']})"
+            ]
+        }
+    }
+}
+
