--- a/lab/44-actuator/src/main/resources/application.properties
+++ b/lab/44-actuator/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.schema-locations=classpath:/rewards/testdb/schema.sql
 
 # Load the accounts only, no restaurant
-spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
-
+#spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
+spring.sql.init.data-locations=classpath:/data-with-restaurants.sql
 # TO-DO-03: Expose some endpoints
 # - Set appropriate property to expose beans and metrics endpoints
 # - Let the application restart (via Spring Boot devtools) and access
@@ -11,7 +11,7 @@ spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 # - The beans and metrics endpoints should work now
 # - Try a metric: http://localhost:8080/actuator/metrics/jvm.memory.max
 # - But what about health endpoint?
-
+management.endpoints.web.exposure.include=*
 # ----------------------------------------------------
 #
 # TO-DO-04: Expose all endpoints
@@ -60,3 +60,15 @@ spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 # - For "system" and "application" groups, configure "show-details" with "always"
 # - Remove "management.endpoint.health.show-details=always" you added earlier
 # - Restart the application and access health indicator of each group
+# For "system" group, configure "show-details" with "always"
+management.endpoint.health.group.system.include=diskSpace,db
+management.endpoint.health.group.system.show-details=always
+management.endpoint.health.group.web.include=ping
+management.endpoint.health.group.application.include=restaurantHealthCheck,restaurantHealthCheck2
+management.endpoint.health.group.application.show-details=always
+
+# Set the severity order for the "application" health group
+management.endpoint.health.group.application.status.order=NO_RESTAURANTS,DOWN,UP
+
+# Enable JMX for accessing Actuator endpoints
+spring.jmx.enabled=true
